# Figury

./: CMakeLists.txt  circle.cpp  circle.h  figure.cpp  figure.h  main.cpp  rectangle.cpp  rectangle.h  square.cpp  square.h  triangle.cpp  triangle.h
