cmake_minimum_required(VERSION 3.29)
project(untitled84)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled84 main.cpp
        figure.cpp
        figure.h
        rectangle.cpp
        rectangle.h
        square.cpp
        square.h
        triangle.h
        triangle.cpp
        circle.h
        circle.cpp)
